--- a/view.html
+++ b/view.html
@@ -9,9 +9,11 @@
   <body>
 
     <div id="loader">
-      <div class="lds-ripple">
-        <div></div>
-        <div></div>
+      <div>
+        <div class="lds-ripple">
+          <div></div>
+          <div></div>
+        </div>
       </div>
     </div>
 
@@ -20,9 +22,10 @@
 
       <span id="url"></span>
 
-      <button type="button" name="getUrl" id="getUrl">Récupérer l'url</button>
+      <button type="button" name="getVideo" id="getVideo">Download this video</button>
     </div>
 
+    <script src="file-saver/dist/FileSaver.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
