--- a/view.html
+++ b/view.html
@@ -25,7 +25,7 @@
       <button type="button" name="getVideo" id="getVideo">Download this video</button>
     </div>
 
-    <script src="file-saver/dist/FileSaver.min.js"></script>
+    <script type="module" src="file-saver/dist/FileSaver.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
